Bring grpc code up to date with akka-projection-grpc 1.4.0 (#478)
* Split grpc tests into grpc-test

Agent-Logs-Url: https://github.com/pjfanning/incubator-pekko-projection/sessions/01087f42-1a9d-4f99-8004-5dad29e00b22

Co-authored-by: pjfanning <11783444+pjfanning@users.noreply.github.com>

* imports

* some more fixes

* imports

* more fixes

* fix issues

* pekko refs

* pekko ports

* Update logback-test.xml

* Update build.sbt

* Update PekkoPersistenceR2DBCDependency.scala

* Update EventSourcedPubSubSpec.scala

* temporarily remove the replication tests

* Fix grpc-test logback config

* Update TestDbLifecycle.scala

* Update TestContainerConf.scala

* Update TestContainerConf.scala

* temp ignore tests

* akka refs

* Update overview.md

* akka refs

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: pjfanning <11783444+pjfanning@users.noreply.github.com>